--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,20 @@ services:
       - mongodb
       - rabbitmq
 
+  identity-svc:
+    image: henriquequeirozcunha/identity-svc:latest
+    build:
+      context: .
+      dockerfile: src/IdentityService/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:80
+      - ConnectionStrings__DefaultConnection=Server=postgres-carsties:5432;User Id=postgres;Password=postgrespw;Database=identity
+    ports:
+      - 5000:80
+    depends_on:
+      - postgres-carsties
+
 volumes:
   pgdata:
   mongodata:
