feat: Dockerize BiddingService

--- a/src/GatewayService/appsettings.Development.json
+++ b/src/GatewayService/appsettings.Development.json
@@ -21,6 +21,13 @@
             "Address": "http://localhost:7002"
           }
         }
+      },
+      "bids": {
+        "Destinations": {
+          "searchApi": {
+            "Address": "http://localhost:7003"
+          }
+        }
       }
     }
   }
