--- a/src/GatewayService/appsettings.Docker.json
+++ b/src/GatewayService/appsettings.Docker.json
@@ -1,27 +1,34 @@
 {
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft.AspNetCore": "Information"
-      }
-    },
-    "IdentityServiceUrl": "http://identity-svc",
-    "ReverseProxy": {
-      "Clusters": {
-        "auctions": {
-          "Destinations": {
-            "auctionApi": {
-              "Address": "http://auction-svc"
-            }
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Information"
+    }
+  },
+  "IdentityServiceUrl": "http://identity-svc",
+  "ReverseProxy": {
+    "Clusters": {
+      "auctions": {
+        "Destinations": {
+          "auctionApi": {
+            "Address": "http://auction-svc"
           }
-        },
-        "search": {
-          "Destinations": {
-            "searchApi": {
-              "Address": "http://search-svc"
-            }
+        }
+      },
+      "search": {
+        "Destinations": {
+          "searchApi": {
+            "Address": "http://search-svc"
+          }
+        }
+      },
+      "bids": {
+        "Destinations": {
+          "searchApi": {
+            "Address": "http://bid-svc"
           }
         }
       }
     }
   }
+}
