--- a/src/GatewayService/appsettings.json
+++ b/src/GatewayService/appsettings.json
@@ -8,11 +8,13 @@
   "AllowedHosts": "*",
   "ReverseProxy": {
     "Routes": {
-      "auctionsRead" : {
+      "auctionsRead": {
         "ClusterId": "auctions",
         "Match": {
           "Path": "/auctions/{**catch-all}",
-          "Methods": ["GET"]
+          "Methods": [
+            "GET"
+          ]
         },
         "Transforms": [
           {
@@ -20,12 +22,16 @@
           }
         ]
       },
-      "auctionsWrite" : {
+      "auctionsWrite": {
         "ClusterId": "auctions",
         "AuthorizationPolicy": "default",
         "Match": {
           "Path": "/auctions/{**catch-all}",
-          "Methods": ["POST", "PUT", "DELETE"]
+          "Methods": [
+            "POST",
+            "PUT",
+            "DELETE"
+          ]
         },
         "Transforms": [
           {
@@ -33,15 +39,46 @@
           }
         ]
       },
-      "search" : {
+      "search": {
         "ClusterId": "search",
         "Match": {
           "Path": "/search/{**catch-all}",
-          "Methods": ["GET"]
+          "Methods": [
+            "GET"
+          ]
         },
         "Transforms": [
           {
             "PathPattern": "api/search/{**catch-all}"
+          }
+        ]
+      },
+      "bidsWrite": {
+        "ClusterId": "bids",
+        "AuthorizationPolicy": "default",
+        "Match": {
+          "Path": "/bids",
+          "Methods": [
+            "POST"
+          ]
+        },
+        "Transforms": [
+          {
+            "PathPattern": "api/bids"
+          }
+        ]
+      },
+      "bidsRead": {
+        "ClusterId": "bids",
+        "Match": {
+          "Path": "/bids/{**catch-all}",
+          "Methods": [
+            "GET"
+          ]
+        },
+        "Transforms": [
+          {
+            "PathPattern": "api/bids/{**catch-all}"
           }
         ]
       }
