--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -107,6 +107,20 @@ services:
       - mongodb
       - rabbitmq
 
+  notify-svc:
+    image: henriquequeirozcunha/notify-svc:latest
+    build:
+      context: .
+      dockerfile: src/NotificationService/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:80
+      - RabbitMq__Host=rabbitmq
+    ports:
+      - 7004:80
+    depends_on:
+      - rabbitmq
+
 volumes:
   pgdata:
   mongodata:
