--- a/frontend/web-app/package.json
+++ b/frontend/web-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "date-fns": "^2.30.0",
     "flowbite-react": "^0.6.4",
     "next": "13.5.4",
     "next-auth": "^4.23.2",
