fix: remove devcerts from git

--- a/.gitignore
+++ b/.gitignore
@@ -478,3 +478,8 @@ $RECYCLE.BIN/
 *.lnk
 infra/prod-k8s/prod-secrets.yml
 infra/prod-k8s/le-issuer-staging.yml
+
+# Custom Ignore
+devcerts
+*.crt
+*.key
