--- a/.github/workflows/deploy-identity.yml
+++ b/.github/workflows/deploy-identity.yml
@@ -11,8 +11,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: docker/setup-buildx-actions@v2
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Set up Docker buildx
+        uses: docker/setup-buildx-actions@v2
       - name: Login to docker hub
         uses: docker/login-action@v2
         with:
