feat: add auction-svc kubernetes deployment

--- a/infra/K8S/postgres-depl.yml
+++ b/infra/K8S/postgres-depl.yml
@@ -33,7 +33,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: postgres-cluster-ip
+  name: postgres-clusterip
 spec:
   type: ClusterIP
   selector:
