--- a/infra/K8S/rabbit-depl.yml
+++ b/infra/K8S/rabbit-depl.yml
@@ -17,7 +17,7 @@ spec:
           env:
             - name: RABBITMQ_DEFAULT_USER
               value: rabbit
-            - name: RABBITMQ_DEFAULT_PASS
+            - name: RABBITMQ_DEFAULT_PASSWORD
               value: rabbit
           ports:
             - containerPort: 15672
