--- a/infra/K8S/mongo-depl.yml
+++ b/infra/K8S/mongo-depl.yml
@@ -35,7 +35,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: mongo-cluster-ip
+  name: mongo-clusterip
 spec:
   type: ClusterIP
   selector:
