--- a/infra/K8S/ingress-svc.yml
+++ b/infra/K8S/ingress-svc.yml
@@ -12,6 +12,12 @@ metadata:
   labels:
     name: ingress-svc
 spec:
+  ingressClassName: nginx
+  tls:
+    - hosts:
+        - app.carsties.com
+        - api.carsties.com
+        #secretName: carsties-app-tls
   rules:
     - host: app.carsties.com
       http:
