--- a/infra/K8S/auction-depl.yml
+++ b/infra/K8S/auction-depl.yml
@@ -3,29 +3,38 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: action-svc
+  name: auction-svc
 spec:
   selector:
     matchLabels:
-      app: action-svc
+      app: auction-svc
   template:
     metadata:
       labels:
-        app: action-svc
+        app: auction-svc
     spec:
       containers:
-        - name: action-svc
+        - name: auction-svc
           image: henriquequeirozcunha/auction-svc
           imagePullPolicy: Never
           env:
             - name: RabbitMq__Host
-              value: rabbit-cluster-ip
+              value: rabbit-clusterip
             - name: RabbitMq__Username
-              value: rabbit
+              valueFrom:
+                secretKeyRef:
+                  name: auction-secret
+                  key: rabbitUn
             - name: RabbitMq__Password
-              value: rabbit
+              valueFrom:
+                secretKeyRef:
+                  name: auction-secret
+                  key: rabbitPw
             - name: ConnectionStrings__DefaultConnection
-              value: Server=postgres-clusterip:5432;User Id=postgres;Password=postgrespw;Database=auctions
+              valueFrom:
+                secretKeyRef:
+                  name: auction-secret
+                  key: connString
             - name: IdentityServiceUrl
               value: http://identity-svc # This will point to some external hosted service such as Digital Ocean DNS....
             - name: Kestrel__Endpoints__Grpc__Protocols
