--- a/infra/K8S/bid-deply.yml
+++ b/infra/K8S/bid-deply.yml
@@ -17,13 +17,22 @@ spec:
           imagePullPolicy: Never
           env:
             - name: RabbitMq__Host
-              value: rabbit-cluster-ip
+              value: rabbit-clusterip
             - name: RabbitMq__Username
-              value: rabbit
+              valueFrom:
+                secretKeyRef:
+                  name: bid-secret
+                  key: rabbitUn
             - name: RabbitMq__Password
-              value: rabbit
+              valueFrom:
+                secretKeyRef:
+                  name: bid-secret
+                  key: rabbitPw
             - name: ConnectionStrings__BidDbConnection
-              value: mongodb://root:mongopw@mongo-clusterip
+              valueFrom:
+                secretKeyRef:
+                  name: bid-secret
+                  key: connString
             - name: IdentityServiceUrl
               value: http://identity-svc # This will point to some external hosted service such as Digital Ocean DNS....
             - name: GrpcAuction
