--- a/infra/K8S/mongo-depl.yml
+++ b/infra/K8S/mongo-depl.yml
@@ -16,9 +16,15 @@ spec:
           image: mongo
           env:
             - name: MONGO_INITDB_ROOT_USERNAME
-              value: root
+              valueFrom:
+                secretKeyRef:
+                  name: mongo-secret
+                  key: username
             - name: MONGO_INITDB_ROOT_PASSWORD
-              value: mongopw
+              valueFrom:
+                secretKeyRef:
+                  name: mongo-secret
+                  key: password
           ports:
             - containerPort: 27017
           volumeMounts:
@@ -31,7 +37,7 @@ spec:
 ---
 # Create a ClusterIP service in order to other pods see this service
 # Same as put the name of the service on DockerComponse such as http://auction-svc
-# action-svc is the "ClusterIP"
+# auction-svc is the "ClusterIP"
 apiVersion: v1
 kind: Service
 metadata:
