--- a/infra/K8S/search-deply.yml
+++ b/infra/K8S/search-deply.yml
@@ -17,13 +17,22 @@ spec:
           imagePullPolicy: Never
           env:
             - name: RabbitMq__Host
-              value: rabbit-cluster-ip
+              value: rabbit-clusterip
             - name: RabbitMq__Username
-              value: rabbit
+              valueFrom:
+                secretKeyRef:
+                  name: search-secret
+                  key: rabbitUn
             - name: RabbitMq__Password
-              value: rabbit
+              valueFrom:
+                secretKeyRef:
+                  name: search-secret
+                  key: rabbitPw
             - name: ConnectionStrings__MongoDbConnection
-              value: mongodb://root:mongopw@mongo-clusterip # NOTE: "@host" is taking IP address from mongo-clusterip CLUSTER IP SERVICE
+              valueFrom:
+                secretKeyRef:
+                  name: search-secret
+                  key: connString
             - name: AuctionServiceUrl
               value: http://auction-clusterip
 
