--- a/infra/K8S/webapp-deply.yml
+++ b/infra/K8S/webapp-deply.yml
@@ -17,7 +17,10 @@ spec:
           imagePullPolicy: Never
           env:
             - name: NEXTAUTH_SECRET
-              value: nextsecret
+              valueFrom:
+                secretKeyRef:
+                  name: webapp-secret
+                  key: authSecret
             - name: NEXTAUTH_URL
               value: https://app.carsties.com
             - name: API_URL
