CI: add deployment files github actions

--- a/infra/K8S/auction-depl.yml
+++ b/infra/K8S/auction-depl.yml
@@ -16,7 +16,7 @@ spec:
       containers:
         - name: auction-svc
           image: henriquequeirozcunha/auction-svc
-          imagePullPolicy: Never
+          imagePullPolicy: Always # NOTE: Change it to Never if running locally
           env:
             - name: RabbitMq__Host
               value: rabbit-clusterip
