--- a/infra/K8S/search-deply.yml
+++ b/infra/K8S/search-deply.yml
@@ -14,7 +14,7 @@ spec:
       containers:
         - name: search-svc
           image: henriquequeirozcunha/search-svc
-          imagePullPolicy: Never
+          imagePullPolicy: Always # NOTE: Change it to Never if running locally
           env:
             - name: RabbitMq__Host
               value: rabbit-clusterip
