--- a/infra/K8S/notify-depl.yml
+++ b/infra/K8S/notify-depl.yml
@@ -14,7 +14,7 @@ spec:
       containers:
         - name: notify-svc
           image: henriquequeirozcunha/notify-svc
-          imagePullPolicy: Never
+          imagePullPolicy: Always # NOTE: Change it to Never if running locally
           env:
             - name: RabbitMq__Host
               value: rabbit-clusterip
