--- a/infra/K8S/webapp-deply.yml
+++ b/infra/K8S/webapp-deply.yml
@@ -14,7 +14,7 @@ spec:
       containers:
         - name: webapp
           image: henriquequeirozcunha/web-app
-          imagePullPolicy: Never
+          imagePullPolicy: Always # NOTE: Change it to Never if running locally
           env:
             - name: NEXTAUTH_SECRET
               valueFrom:
@@ -37,19 +37,6 @@ metadata:
   name: webapp-clusterip
 spec:
   type: ClusterIP
-  selector:
-    app: webapp
-  ports:
-    - port: 3000
-      targetPort: 3000
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: webapp-lb
-spec:
-  type: LoadBalancer
   selector:
     app: webapp
   ports:
