--- a/infra/prod-k8s/ingress-svc.yml
+++ b/infra/prod-k8s/ingress-svc.yml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   name: ingress-svc
   annotations:
-    cert-manager.io/issuer: 'letsencrypt-staging'
+    cert-manager.io/issuer: 'letsencrypt-prod'
   labels:
     name: ingress-svc
 spec:
